1998-05-14  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* timeutil.c (isodate_from_time_t): Do not add the spurious
	padding. 

	* calobj.c (store_date_list): Bug fix:  I was using the wrong
	pointer when saving the exception date list. 
	(set_date_list): Bug fix:  load correctly the complete exception
	date list. 
	(set_date_list): Use ',' for the exception date separator as the
	versit people can not get their standard right. 

	* gncal-full-day.c (unrecur_appointment): Support for making an
	existing recurrent event `movable' for a day.

	* calobj.c (ical_object_add_exdate): New routine, used to add
	exception dates. 
	(ical_object_duplicate): New routine:  used to do the magic
	recur->no-recur event.

1998-05-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-full-day.c (new_appointment): Use gtk_calendar freeze/thaw

	* gncal-year-view.c (gncal_year_view_set_year): Use gtkcalendar freeze/thaw. 

	* eventedit.c (event_editor_init): Use gnome_dialog_set_close to
	avoid the ugly warning. 

	* main.c (display_objedit): Default to the day the user is looking
	at. 

1998-05-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-day-panel.c (full_day_size_allocated): Do not emit a value
	changed signal if the value is the same. 

1998-05-04  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* prop.c (prop_apply): Only run the apply code once.

1998-05-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-day-panel.c (update): Draw the day at startup. 
	(gncal_day_panel_set): Fix selected-day display. 
	(gncal_day_panel_new): Switch day on double clicks, not on single
	clicks. 

	* calobj.c (ical_object_compute_end): Removed debug messages. 

1998-04-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* prop.c (prop_apply): Do not call prop_cancel, ths is now using
	GnomePropertyDialog. 

1998-04-29  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-week-view.c (sync_week): Use gnome_calendar_tag_calendar.
